# cafca

./: .gitignore  CMakeLists.txt  README.md  zk.sh
src/cafca/: main.cc
src/cafca/commit_log/: commit_log.cc  commit_log.h  commit_log_file.cc  commit_log_file.h  commit_log_offset_metadata.h  commit_log_segment.cc  commit_log_segment.h  offset_index.cc  offset_index.h
src/cafca/message/: file_message_set.h  message.cc  message.h  message_set.cc  message_set.h  messages_buffer.cc  messages_buffer.h
src/cafca/server/: cafca_components.h  cafca_controller.cc  cafca_controller.h  cafca_server.cc  cafca_server.h
src/cafca/server/api/: connection.cc  connection.h  socket_server.cc  socket_server.h
src/cafca/server/api/command/: fetch_request.cc  fetch_request.h  fetch_response.cc  fetch_response.h  offset_request.cc  offset_request.h  offset_response.cc  offset_response.h  partition_fetch_info.h  producer_request.cc  producer_request.h  producer_response.cc  producer_response.h  topic_metadata_request.cc  topic_metadata_request.h  topic_metadata_response.cc  topic_metadata_response.h
src/cafca/server/cluster/: active_members.h  broker_endpoint.h  partition.cc  partition.h  partition_members.h  replica.h  topic_and_partition.h  topic_metadata.h
src/cafca/util/: binary.h  byte_buffer.cc  byte_buffer.h  file_channel.cc  file_channel.h  logging.h  optional.h  short_string.h
